--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Thomas A. Hall
+#logo: /assets/img/headshot/png
+description: Product/Program Leader: Passionate about Data Analytics, Web3 and DeFi/CeFi Technology. I drive solutions that empower businesses to prioritize delivering an exceptional customer experience.
+show_downloads: false
+theme: jekyll-theme-minimal
